2000-11-22  Richard Braakman  <dark@wapi.com>

	* gw/smsc.c, gw/smsc_cimd.c: Reformatted.

2000-11-22  Lars Wirzenius  <liw@iki.fi>

	* test/drive_wapbox.c: Killed a memory leak by destroying a
	temporary octet string.
	
	* gwlib/gwmem-check.c: When dumping allocated areas, dump the
	first few bytes of the area.
	
	* gwlib/http.c: Destroy HTTPClients before destroying the fdset.

2000-11-22  Kalle Marjola  <rpr@wapit.com>

	* doc/userguide/userguide.xml: Moved some explanations to correct
	places, to avoid mixed up context

2000-11-22  Richard Braakman  <dark@wapi.com>

	* gwlib/fdset.c: When destroying an fdset with active fd's,
	close them first and signal that event.

2000-11-22  Lars Wirzenius  <liw@iki.fi>

	* doc/userguide/userguide.xml: Add notes about HTTP proxy username
	and password.

2000-11-21  Richard Braakman  <dark@wapi.com>

	* wmlscript/wserror.c, wmlscript/wslexer.c:
        Fixed some assertions with side effects.

2000-11-21  Richard Braakman  <dark@wapi.com>

	* gw/html.c, convert_html_entity(): Made conversion of entities
	like &#1234; work.

2000-11-21  Richard Braakman  <dark@wapi.com>

	* gw/html.c, gw/msg.c: Reformatted.

2000-11-21  Richard Braakman  <dark@wapi.com>

	* gw/cgi.[ch]: Removed, they are no longer used.

	* gw/smsbox.c, gw/smsbox_req.[ch]: Removed inclusion of cgi.h.

2000-11-21  Richard Braakman  <dark@wapi.com>

	* gwlib/gwthread-pthread.c, gwlib/conn.c, gwlib/list.c,
	gwlib/utils.c (roundup_div): Formatted according to our coding style.
	All of gwlib/ is now converted.

2000-11-21  Lars Wirzenius  <liw@iki.fi>

	* gwlib/http.c: Made persistent connection detection work with
	HTTP/1.0 responses and responses with the "Connection: close"
	header. Also removed an extra "Using proxy" report.

	* ChangeLog: Indented the first line of the previous log entry
	properly. (8, not 4)

2000-11-21  Yann Muller  <ymuller@3glab.com>

	* gwlib/utils.[ch], gw/smsbox_req.c: moved roundup_div() from