@@ -1,0 +1,74 @@
+#FIG 3.2
+Portrait
+Center
+Metric
+A4      
+100.00
+Single
+-2
+1200 2
+6 90 90 6525 2835
+6 135 1350 585 2475
+2 2 0 1 0 7 50 0 -1 0.000 0 0 -1 0 0 5
+	 135 1620 585 1620 585 2475 135 2475 135 1620
+2 2 0 1 0 7 50 0 -1 0.000 0 0 -1 0 0 5
+	 450 1620 540 1620 540 1350 450 1350 450 1620
+2 4 0 1 0 7 50 0 -1 0.000 0 0 7 0 0 5
+	 540 1980 540 1665 180 1665 180 1980 540 1980
+-6
+6 3240 1170 4320 2250
+1 3 0 1 0 7 50 0 -1 0.000 1 0.0000 3780 1710 497 497 3780 1710 3825 2205
+4 0 0 50 0 0 12 0.0000 4 135 540 3510 1755 Kannel\001
+-6
+6 2475 900 3105 1305
+4 0 0 50 0 0 12 0.0000 4 135 495 2475 1035 SMSC\001
+4 0 0 50 0 0 12 0.0000 4 180 615 2475 1260 protocol\001
+-6
+2 2 0 1 0 0 56 0 -1 0.000 0 0 -1 0 0 5
+	 1350 1125 2025 1125 2025 2475 1350 2475 1350 1125
+2 1 0 1 0 0 56 0 -1 0.000 0 0 -1 0 0 5
+	 1350 1125 1575 945 2250 945 2250 2250 2025 2475
+2 1 0 1 0 0 56 0 -1 0.000 0 0 -1 0 0 2
+	 2025 1125 2250 945
+2 2 0 1 0 7 50 0 -1 0.000 0 0 -1 0 0 5
+	 5220 540 5850 540 5850 2070 5220 2070 5220 540
+2 1 0 1 0 7 50 0 -1 0.000 0 0 -1 0 0 2
+	 5850 540 6525 90
+2 1 0 1 0 7 50 0 -1 0.000 0 0 -1 0 0 2
+	 5220 540 5895 90
+2 1 0 1 0 7 50 0 -1 0.000 0 0 -1 0 0 2
+	 5850 2056 6525 1606
+2 1 0 1 0 7 50 0 -1 0.000 0 0 -1 0 0 3
+	 5895 90 6525 90 6525 1620
+2 2 0 1 0 7 50 0 -1 0.000 0 0 -1 0 0 5
+	 5310 1395 5760 1395 5760 1980 5310 1980 5310 1395
+2 1 0 1 0 7 50 0 -1 0.000 0 0 -1 0 0 2
+	 5400 1395 5400 1980
+2 1 0 1 0 7 50 0 -1 0.000 0 0 -1 0 0 2
+	 5490 1395 5490 1980
+2 1 0 1 0 7 50 0 -1 0.000 0 0 -1 0 0 2
+	 5580 1395 5580 1980
+2 1 0 1 0 7 50 0 -1 0.000 0 0 -1 0 0 2
+	 5670 1395 5670 1980
+2 2 0 1 0 7 50 0 -1 0.000 0 0 -1 0 0 5
+	 5310 675 5760 675 5760 810 5310 810 5310 675
+3 2 0 1 0 7 50 0 -1 0.000 0 1 1 4
+	0 0 1.00 60.00 120.00
+	0 0 1.00 60.00 120.00
+	 4230 1395 4860 1215 4590 1710 5175 1530
+	 0.000 -1.000 -1.000 0.000
+3 2 0 1 0 7 50 0 -1 0.000 0 1 1 4
+	0 0 1.00 60.00 120.00
+	0 0 1.00 60.00 120.00
+	 2250 1575 2880 1485 2700 1980 3240 1890
+	 0.000 -1.000 -1.000 0.000
+3 2 0 1 0 7 50 0 -1 0.000 0 1 1 4
+	0 0 1.00 60.00 120.00
+	0 0 1.00 60.00 120.00
+	 675 1800 1126 1716 946 2211 1260 2115
+	 0.000 -1.000 -1.000 0.000
+4 0 0 50 0 0 12 0.0000 4 135 465 90 1080 Phone\001
+4 0 0 50 0 0 12 0.0000 4 135 450 4500 1035 HTTP\001
+4 0 0 50 0 0 12 0.0000 4 135 930 1395 2835 SMS Center\001
+4 0 0 50 0 0 12 0.0000 4 180 1260 5265 2520 Content provider\001
+-6
